--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "tailwindcss": "^3.4.1"
   }
 }
